fixed align

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,18 +124,20 @@
   display: flex;
   justify-content: center;
   height: fit-content;
-  width: 220px;
-  margin-left: 80px;
-  margin-right: 80px;
+
   padding-bottom: 30px;
   margin-top: 30px;
+  text-align: center;
 }
-
+footer {
+  font-family: "Open Sans", sans-serif;
+}
 .footer-who-we-are {
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .footer-links {
+  font-size: 14px;
   display: block;
   justify-content: center;
   text-align: center;
@@ -145,7 +147,7 @@
 .logo-adalab {
   width: 150px;
   height: 50px;
-  margin-left: 102px;
-  margin-right: 102px;
+  display: block;
+  justify-content: center;
   margin-bottom: 30px;
 }
